[gd_scene load_steps=18 format=3 uid="uid://eawk61k5m142"]

[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="1_ba3qc"]
[ext_resource type="Texture2D" uid="uid://b2x1ct26rydyq" path="res://assets/snowysky.png" id="1_vrush"]
[ext_resource type="Shader" path="res://scripts/water.gdshader" id="2_4mfs3"]
[ext_resource type="Texture2D" uid="uid://bknh7ot71x1sb" path="res://assets/ocean.png" id="3_gmmlt"]
[ext_resource type="FontFile" uid="uid://kg2w0sgacegs" path="res://assets/fonts/8bitoperator_jve.ttf" id="5_iw2l0"]
[ext_resource type="Texture2D" uid="uid://bs572n88yem23" path="res://assets/checkboxticked.png" id="6_lr77o"]
[ext_resource type="Texture2D" uid="uid://bs3srnwbkdq3m" path="res://assets/checkbox.png" id="7_ojxjm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y25bj"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ah16g"]
shader = ExtResource("2_4mfs3")
shader_parameter/amplitude_px = 2.0
shader_parameter/period = 2.2
shader_parameter/travel_speed_cols = 96.0
shader_parameter/wrap_vertical = false
shader_parameter/highlight_strength = 0.08
shader_parameter/highlight_width_cols = 6.0
shader_parameter/highlight_speed_cols = 120.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6lm75"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_top = 25.0
expand_margin_bottom = 25.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ea2j4"]
bg_color = Color(1, 1, 1, 0.164706)
expand_margin_top = 25.0
expand_margin_bottom = 25.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c2wsb"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b6nj6"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_uwunj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0xxku"]
resource_name = "enter"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_op31g"]
resource_name = "exit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"change_scenes"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y06k3"]
_data = {
"RESET": SubResource("Animation_uwunj"),
"enter": SubResource("Animation_0xxku"),
"exit": SubResource("Animation_op31g")
}

[node name="SettingsMenu" type="CanvasLayer"]
script = ExtResource("1_ba3qc")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_vrush")

[node name="WaterHolder" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -959.0
offset_top = -151.0
offset_right = 977.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_y25bj")

[node name="Sprite2D" type="Sprite2D" parent="Control/WaterHolder"]
self_modulate = Color(0.540262, 0.861886, 0.960313, 1)
material = SubResource("ShaderMaterial_ah16g")
position = Vector2(-3, -11)
scale = Vector2(6.06995, 5.125)
texture = ExtResource("3_gmmlt")
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = 1.0
offset_right = -652.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Control/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(360, 140)
layout_mode = 2
theme_override_constants/outline_size = 20
theme_override_fonts/normal_font = ExtResource("5_iw2l0")
theme_override_font_sizes/normal_font_size = 110
text = "Settings"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Music Volume" type="RichTextLabel" parent="Control/VBoxContainer/HBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(350, 75)
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = ExtResource("5_iw2l0")
theme_override_font_sizes/bold_italics_font_size = 16
theme_override_font_sizes/normal_font_size = 64
text = "Music Volume
"

[node name="HSlider" type="HSlider" parent="Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(450, 50)
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_6lm75")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_ea2j4")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_ea2j4")
value = 100.0

[node name="LogoButton" type="CheckBox" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("5_iw2l0")
theme_override_font_sizes/font_size = 56
theme_override_icons/checked = ExtResource("6_lr77o")
theme_override_icons/unchecked = ExtResource("7_ojxjm")
text = "Really cool button that does cool things to the logo"

[node name="Fullscreen" type="CheckBox" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("5_iw2l0")
theme_override_font_sizes/font_size = 56
theme_override_icons/checked = ExtResource("6_lr77o")
theme_override_icons/unchecked = ExtResource("7_ojxjm")
text = "Fullscreen"

[node name="HFlowContainer" type="HFlowContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="ResetSave" type="Button" parent="Control/VBoxContainer/HFlowContainer"]
custom_minimum_size = Vector2(400, 85)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_iw2l0")
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = SubResource("StyleBoxFlat_c2wsb")
text = "Reset Save Data"

[node name="BackButton" type="Button" parent="Control"]
custom_minimum_size = Vector2(225, 100)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -159.0
offset_top = 19.0
offset_right = -25.0
offset_bottom = 100.0
grow_horizontal = 0
mouse_filter = 1
theme_override_fonts/font = ExtResource("5_iw2l0")
theme_override_font_sizes/font_size = 72
theme_override_styles/normal = SubResource("StyleBoxFlat_c2wsb")
text = "Back"

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_b6nj6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y06k3")
}

[connection signal="toggled" from="Control/VBoxContainer/LogoButton" to="." method="_on_check_box_toggled"]
[connection signal="toggled" from="Control/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="Control/VBoxContainer/HFlowContainer/ResetSave" to="." method="_on_reset_save_pressed"]
[connection signal="pressed" from="Control/BackButton" to="." method="_on_back_button_pressed"]
